# poc_delta_table_poetry

./: README.md  pyproject.toml
src/: main.py
src/data/csv/: data.csv
